--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PORT = 3001
-MONGO_URI = mongodb+srv://20225391:20225391@cluster0.qyvwngh.mongodb.net/it4409?appName=Cluster0
+PORT = 3000
+MONGO_URI = mongodb+srv://20225391:20225391@cluster0.qyvwngh.mongodb.net/it4409?retryWrites=true&w=majority
